; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsdate.c_Dp_toJSON.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsdate.c_Dp_toJSON.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@JS_HNUMBER = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"toISOString\00", align 1
@.str.1 = private unnamed_addr constant [35 x i8] c"this.toISOString is not a function\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @Dp_toJSON to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Dp_toJSON(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i32 @js_copy(i32* %3, i32 0)
  %5 = load i32*, i32** %2, align 8
  %6 = load i32, i32* @JS_HNUMBER, align 4
  %7 = call i32 @js_toprimitive(i32* %5, i32 -1, i32 %6)
  %8 = load i32*, i32** %2, align 8
  %9 = call i64 @js_isnumber(i32* %8, i32 -1)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %19

11:                                               ; preds = %1
  %12 = load i32*, i32** %2, align 8
  %13 = call i32 @js_tonumber(i32* %12, i32 -1)
  %14 = call i32 @isfinite(i32 %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %19, label %16

16:                                               ; preds = %11
  %17 = load i32*, i32** %2, align 8
  %18 = call i32 @js_pushnull(i32* %17)
  br label %35

19:                                               ; preds = %11, %1
  %20 = load i32*, i32** %2, align 8
  %21 = call i32 @js_pop(i32* %20, i32 1)
  %22 = load i32*, i32** %2, align 8
  %23 = call i32 @js_getproperty(i32* %22, i32 0, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %24 = load i32*, i32** %2, align 8
  %25 = call i32 @js_iscallable(i32* %24, i32 -1)
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %30, label %27

27:                                               ; preds = %19
  %28 = load i32*, i32** %2, align 8
  %29 = call i32 @js_typeerror(i32* %28, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.1, i64 0, i64 0))
  br label %30

30:                                               ; preds = %27, %19
  %31 = load i32*, i32** %2, align 8
  %32 = call i32 @js_copy(i32* %31, i32 0)
  %33 = load i32*, i32** %2, align 8
  %34 = call i32 @js_call(i32* %33, i32 0)
  br label %35

35:                                               ; preds = %30, %16
  ret void
}

declare dso_local i32 @js_copy(i32*, i32) #1

declare dso_local i32 @js_toprimitive(i32*, i32, i32) #1

declare dso_local i64 @js_isnumber(i32*, i32) #1

declare dso_local i32 @isfinite(i32) #1

declare dso_local i32 @js_tonumber(i32*, i32) #1

declare dso_local i32 @js_pushnull(i32*) #1

declare dso_local i32 @js_pop(i32*, i32) #1

declare dso_local i32 @js_getproperty(i32*, i32, i8*) #1

declare dso_local i32 @js_iscallable(i32*, i32) #1

declare dso_local i32 @js_typeerror(i32*, i8*) #1

declare dso_local i32 @js_call(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
